[workspace]
members = [
    "src/core",
    "src/challenge",
    "src/external",
    "src/enarx",
    "src/executor",
]

[package]
name = "Shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmlanche = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
enarx-keep-api = "0.1.0"
enarx-attestation = "0.1.0"
rand = "0.8"
prometheus = "0.13"
