[package]
name = "Shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmlanche = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
prometheus = "0.13"
tee-contract-core = { path = "../core" }
tee-contract-types = { path = "../types" }
tee-contract-enarx = { path = "../enarx" }

[dev-dependencies]
tokio-test = "0.4"
